--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   font-family: fantasy;
   color: #fff;
+  background-color: #b9540c;
 }
 
 ul {
@@ -49,9 +50,9 @@ img {
 }
 
 .main-content {
-  margin: 0;
+  margin: 0 auto;
   padding: 0px 80px 30px 80px;
-  background-color: #b9540c;
+  max-width: 1200px;
 }
 
 .character {
