--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -44,7 +44,7 @@ img {
   flex-direction: column;
 }
 
-.characters-list {
+.characters {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   row-gap: 15px;
@@ -68,11 +68,11 @@ img {
   flex-direction: column;
   position: relative;
   height: 100%;
+  overflow: hidden;
 }
 
 .character__portrait {
   height: auto;
-  border-radius: 5px;
 }
 
 .character__info {
