--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: fantasy;
+  font-family: "Bellefair", serif;
   color: #fff;
   background-color: #b9540c;
 }
@@ -19,6 +19,14 @@ ul {
 
 img {
   max-width: 100%;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  color: inherit;
+  font-family: inherit;
 }
 
 .reverse {
@@ -69,6 +77,7 @@ img {
   position: relative;
   height: 100%;
   overflow: hidden;
+  font-size: 1rem;
 }
 
 .character__portrait {
@@ -80,7 +89,6 @@ img {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  font-size: 0.9rem;
   justify-content: space-between;
   height: 100%;
 }
@@ -88,7 +96,7 @@ img {
 .character__name {
   font-weight: 400;
   padding: 0px;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 5px;
 }
@@ -103,6 +111,7 @@ img {
 .character__state {
   display: flex;
   gap: 5px;
+  align-items: flex-end;
 }
 
 .overlay {
@@ -116,7 +125,7 @@ img {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  justify-content: space-between;
 
   &:hover {
     opacity: 1;
@@ -126,4 +135,22 @@ img {
 .emoji {
   font-size: 1rem;
   text-align: right;
+}
+
+.button {
+  background-color: #67331e;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.properties-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
